Fixed issues on mobile views

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,6 +23,8 @@
     bottom: 0;
     right: 0;
     height: 60px;
+    margin: 0;
+    padding: 5px;
     background-color: $dark;
     color: $gold;
     z-index: 10;
