--- a/src/content/Home.scss
+++ b/src/content/Home.scss
@@ -23,8 +23,9 @@
 			bottom: 0;
 			text-align: center;
 			font-size: 150%;
-			margin: 150px auto;
-			height: 70vh;
+			margin: 0 auto;
+			max-height: 80vh;
+			height: 100%;
 			width: 100%;
 			overflow: hidden;
 			perspective: 150px;
@@ -81,5 +82,9 @@
 @include media-breakpoint-up(md) {
 	.Home {
 		font-size: 200%;
+
+		&-content-wrap {
+			margin: 50px auto;
+		}
 	}
 }
