--- a/src/content/Shooting-stars.scss
+++ b/src/content/Shooting-stars.scss
@@ -1,6 +1,7 @@
 $shooting-time: 3000ms;
 
 .night {
+  margin-top: -200px;
   position: relative;
   width: 1200px;
   height: 1200px;
