--- a/src/index.scss
+++ b/src/index.scss
@@ -19,7 +19,7 @@ code {
 }
 
 section {
-  height: 98vh;
+  min-height: 98vh;
 }
 
 h1, h2, h3 {
